Correcting spacing in various locations.

--- a/sass/scss/parkourendure/_buttons.scss
+++ b/sass/scss/parkourendure/_buttons.scss
@@ -11,7 +11,7 @@ a.button {
 }
 
 a.button-link {
-	margin-top: 30px;
+	margin: 0;
 	font-size: 2em;
 	text-decoration: none;
 }
