--- a/sass/scss/parkourendure/_general.scss
+++ b/sass/scss/parkourendure/_general.scss
@@ -2,7 +2,7 @@ html {
 	font-size: 16px;
 }
 
-p{
+*{
 	margin: 0;
 	padding: 0;
 }
@@ -34,6 +34,11 @@ h1, h2, h3, h4, h5, h6, .header-button {
 	display: block;
 	margin-left: auto !important;
 	margin-right: auto !important;
+}
+
+.section{
+	margin-top: 15px;
+	margin-bottom: 15px;
 }
 
 div.important
